--- a/index.html
+++ b/index.html
@@ -215,13 +215,13 @@
 
 
 
-        <h3 class="partners">Partners</h3>
+        <h3 class="partners">Partners and Wider Network</h3>
         <hr>
         <div class="container4">
             <div class="border">
                 <img class="cardiff-universitypng-icon" alt="" src="../public/cardiffuniversitypng@2x.png" />
-                <img class="screenshot-from-2024-04-26-10-" alt=""
-                    src="../public/screenshot-from-20240426-104749@2x.png" />
+                <img class="screenshot-from-2024-04-26-10-" alt="" src="../public/screenshot-from-20240426-104749@2x.png" />
+                <img class="mental-health-platform" alt="" src="../public/mental-health-platform.png" />
             </div>
         </div>
 
