--- a/index.html
+++ b/index.html
@@ -222,6 +222,11 @@
                 <img class="cardiff-universitypng-icon" alt="" src="../public/cardiffuniversitypng@2x.png" />
                 <img class="screenshot-from-2024-04-26-10-" alt="" src="../public/screenshot-from-20240426-104749@2x.png" />
                 <img class="mental-health-platform" alt="" src="../public/mental-health-platform.png" />
+                <img class="mersey-care" alt="" src="../public/mersey-care.png" />
+                <img class="cdl" alt="" src="../public/cdl.png" />
+                <img class="ukri" alt="" src="../public/ukri.png" />
+                <img class="welsh-government" alt="" src="../public/welsh-government.png" />
+                <img class="mediwales" alt="" src="../public/mediwales.png" />
             </div>
         </div>
 
