--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
 
 
-        <h3 class="partners">Partners and Wider Network</h3>
+        <h3 class="partners">Partners, Collaborators and Wider Network</h3>
         <hr>
         <div class="container4">
             <div class="border">
