--- a/Investing.html
+++ b/Investing.html
@@ -80,8 +80,6 @@
 
         <section class="container1">
             <h1>MeOmics is a High Impact Investment Opportunity</h1>
-            <p> <i>MeOmics is a high-risk, early-stage business. If you are considering investing, you should understand
-                    that your capital is unprotected if something goes wrong. Only invest if you are comfortable with the possibility of losing your entire investment.</i></p>
         </section>
         <section class="container2">
             <h2>MeOmics Pre-Seed Pitch Deck</h2>
@@ -108,6 +106,9 @@
             <p>If you're interested in investing and would like to learn more, please reach out to Alasdair Pettigrew,
                 either through this contact form or directly by e-mail or phone (details shown below). We'd love to hear
                 from you!</p><button><a href="/contact-us.html">Contact Us</a></button>
+            <p> <i>MeOmics is a high-risk, early-stage business. If you are considering investing, you should understand
+                    that your capital is unprotected if something goes wrong. Only invest if you are comfortable with the 
+                possibility of losing your entire investment.</i></p>
         </section>
 
         <section class="container4">
