--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         </div>
         <div class="unlocking-the-future-container">
-            <p class="unlocking-the-future">Unlocking the future of<br>mental Health</p>
+            <p class="unlocking-the-future">Transforming Psychiatry<br>Through Precision Neuroscience</p>
 
         </div>
         <div class="btn">
@@ -94,9 +94,6 @@
     <main>
         <div class="meomics-is-a">
             <p>
-                <b>Transforming Psychiatry Through Precision Neuroscience</b>
-            </p>
-            <p>
                 <b>MeOmics is pioneering a new era in psychiatric drug discovery</b> with a first-in-class, 
                 AI-enhanced, human neuronal cell platform designed to unlock patient-specific 
                 insights and radically improve treatment success.<br>
@@ -104,15 +101,6 @@
                 learning to build predictive biomarkers that stratify patient response at the earliest 
                 stages of drug development, bringing precision medicine to psychiatry for the first time.
             </p>
-            <p>
-                <b>Why Psychiatry Needs a New Approach</b>
-            </p>
-            <p>
-                Psychiatric illness remains one of the most underserved areas in medicine. High clinical 
-                trial failure rates, a lack of translatable models, and poor stratification of patients 
-                have held back innovation for decades. MeOmics addresses this challenge head-on.
-            </p>
-            <p>
                 <b>Why Psychiatry Needs a New Approach</b>
             </p>
             <p>
