--- a/team.html
+++ b/team.html
@@ -120,6 +120,38 @@
                 </div>
             </div>
 
+<h1>Our Founders and Scientific Advisory Board</h1>
+        <section class="team-members">
+            <div class="team-member">
+                <div class="member-info">
+                    <img src="/public/adrian.png" alt="Team Member 1">
+                    <h2>Professor Adrian Harwood</h2>
+                    <h3>Chief Technology Officer</h3>
+                    <p>Leading Expert in Neuronal Cell Biology & Neuropsychopharmacology</p>
+                    <a href="https://profiles.cardiff.ac.uk/staff/harwoodaj">Contact Info</a>
+                </div>
+            </div>
+
+            <div class="team-member">
+                <div class="member-info">
+                    <img src="/public/jeremy.png" alt="Team Member 3">
+                    <h2>Professor Jeremy Hall</h2>
+                    <h3>Chief Medical Officer</h3>
+                    <p>Leading Expert in Psychiatric Phenotypes & Biomarkers</p>
+                    <a href="https://profiles.cardiff.ac.uk/staff/hallj10">Contact Info</a>
+                </div>
+            </div>
+
+            <div class="team-member">
+                <div class="member-info">
+                    <img src="/public/james.png" alt="Team Member 6">
+                    <h2>Professor James Walters</h2>
+                    <h3>Special Advisor</h3>
+                    <p>Expert in Neuropsychiatric Genetics & Genomics</p>
+                    <a href="https://profiles.cardiff.ac.uk/staff/waltersjt">Contact Info</a>
+                </div>
+            </div>
+
         </section>
     </main>
         <!-- Message Box -->
