--- a/team.html
+++ b/team.html
@@ -119,8 +119,8 @@
                     <a href="https://www.linkedin.com/in/alicia-campbell-b8515161/">Contact Info</a>
                 </div>
             </div>
-
-<h1>Our Founders and Scientific Advisory Board</h1>
+<section>
+    <h1>Our Founders and Scientific Advisory Board</h1>
         <section class="team-members">
             <div class="team-member">
                 <div class="member-info">
@@ -151,7 +151,7 @@
                     <a href="https://profiles.cardiff.ac.uk/staff/waltersjt">Contact Info</a>
                 </div>
             </div>
-
+</section>
         </section>
     </main>
         <!-- Message Box -->
